@@ -1,3 +1,11 @@
+2011-09-27 Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V02-04-15
+	* call prctl ( PR_SET_PDEATHSIG, SIGKILL ); to fix pb with recycle 
+	immediately after start
+	* add flip chart of busy fraction from cpustat  
+	* fill microstate legenda every 80 instances
+	
 2011-08-17 Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V02-04-14
